[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/MainScene/MainScene.gd" type="Script" id=1]
[ext_resource path="res://Resources/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Environment/Env3.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Environments/cyberpunk-corridor-files/PNG/cyberpunk-corridor-PREVIEW.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]

[node name="MainScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -3407, 0 )
scale = Vector2( 2.73, 2.73 )
texture = ExtResource( 4 )
centered = false

[node name="Backgrounds" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Backgrounds"]
scale = Vector2( 2.73, 2.73 )
texture = ExtResource( 4 )
centered = false

[node name="Environments" type="Node2D" parent="."]

[node name="Env3" parent="Environments" instance=ExtResource( 3 )]
position = Vector2( 125, 400 )

[node name="Env5" parent="Environments" instance=ExtResource( 3 )]
position = Vector2( -249, 400 )

[node name="Env4" parent="Environments" instance=ExtResource( 3 )]
position = Vector2( 502, 400 )
__meta__ = {
"_edit_group_": true
}

[node name="Projectiles" type="Node" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Node2D" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Node2D" groups=["Fall"]]
position = Vector2( 280, 386 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 125, 255 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -62.5, -127.5 )
current = true
limit_left = 0
limit_top = 0
limit_bottom = 480
limit_smoothed = true
smoothing_enabled = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
